# ai-news-agent

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW.md  CURRENT_STATE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  SECURITY_PROMPT_INJECTION.md  TASK_FOR_CLAUDE_CODE.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: ffa7c73e59fb_initial_database_schema.py
context/: CURRENT_STATE.md  PROJECT_CONTEXT.md
examples/: scheduler_demo.py
scripts/: check_secrets.sh
src/ai_news_agent/: __init__.py  config.py  models.py  security.py  validators.py
src/ai_news_agent/collectors/: __init__.py  base.py  rss.py  rss_with_storage.py
src/ai_news_agent/collectors/parsers/: __init__.py  arxiv.py  base.py  standard.py
src/ai_news_agent/deduplication/: __init__.py  embeddings.py  service.py
src/ai_news_agent/digest/: __init__.py  formatters.py  generator.py  ranker.py
src/ai_news_agent/scheduler/: README.md  __init__.py  scheduler.py
src/ai_news_agent/storage/: __init__.py  database.py  models.py  repositories.py
src/ai_news_agent/utils/: __init__.py  cache.py  rate_limiter.py
tests/: __init__.py  test_cache.py  test_deduplication.py  test_digest.py  test_integration.py  test_rate_limiter.py  test_rss_collector.py  test_rss_collector_simple.py  test_rss_with_storage.py  test_scheduler.py  test_security.py  test_storage.py  test_validators.py
tests/fixtures/: rss_samples.py
